Ingress/api-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/backends: '{"k8s1-6d33374f-default-krakend-service-8000-6e0779a6":"HEALTHY"}'
    ingress.kubernetes.io/forwarding-rule: k8s2-fr-tnxdlbv6-default-api-gateway-gv91h0kh
    ingress.kubernetes.io/target-proxy: k8s2-tp-tnxdlbv6-default-api-gateway-gv91h0kh
    ingress.kubernetes.io/url-map: k8s2-um-tnxdlbv6-default-api-gateway-gv91h0kh
  creationTimestamp: "2022-05-04T18:10:59Z"
  finalizers:
  - networking.gke.io/ingress-finalizer-V2
  generation: 1
  managedFields:
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:defaultBackend:
          .: {}
          f:service:
            .: {}
            f:name: {}
            f:port:
              .: {}
              f:number: {}
    manager: GoogleCloudConsole
    operation: Update
    time: "2022-05-04T18:10:59Z"
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:ingress.kubernetes.io/backends: {}
          f:ingress.kubernetes.io/forwarding-rule: {}
          f:ingress.kubernetes.io/target-proxy: {}
          f:ingress.kubernetes.io/url-map: {}
        f:finalizers:
          .: {}
          v:"networking.gke.io/ingress-finalizer-V2": {}
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: glbc
    operation: Update
    time: "2022-05-04T18:12:03Z"
  name: api-gateway
  namespace: default
  resourceVersion: "125549"
  uid: 6599c4a4-d5c7-456a-9ff9-77acde2879ab
spec:
  defaultBackend:
    service:
      name: krakend-service
      port:
        number: 8000
status:
  loadBalancer:
    ingress:
    - ip: 34.117.49.96
