Ingress/publications-debug.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/backends: '{"k8s1-6d33374f-default-publications-svc-8000-5b0dfb72":"HEALTHY"}'
    ingress.kubernetes.io/forwarding-rule: k8s2-fr-tnxdlbv6-default-publications-service-debug-00284z84
    ingress.kubernetes.io/target-proxy: k8s2-tp-tnxdlbv6-default-publications-service-debug-00284z84
    ingress.kubernetes.io/url-map: k8s2-um-tnxdlbv6-default-publications-service-debug-00284z84
  creationTimestamp: "2022-05-04T18:10:22Z"
  finalizers:
  - networking.gke.io/ingress-finalizer-V2
  generation: 1
  managedFields:
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:defaultBackend:
          .: {}
          f:service:
            .: {}
            f:name: {}
            f:port:
              .: {}
              f:number: {}
    manager: GoogleCloudConsole
    operation: Update
    time: "2022-05-04T18:10:22Z"
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:ingress.kubernetes.io/backends: {}
          f:ingress.kubernetes.io/forwarding-rule: {}
          f:ingress.kubernetes.io/target-proxy: {}
          f:ingress.kubernetes.io/url-map: {}
        f:finalizers:
          .: {}
          v:"networking.gke.io/ingress-finalizer-V2": {}
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: glbc
    operation: Update
    time: "2022-05-04T18:11:37Z"
  name: publications-service-debug
  namespace: default
  resourceVersion: "125578"
  uid: 97c7efbd-69e1-48f0-85b5-2d81a62f4535
spec:
  defaultBackend:
    service:
      name: publications-svc
      port:
        number: 8000
status:
  loadBalancer:
    ingress:
    - ip: 34.110.178.223
